Crates/simulatron-salt/src/lib/snapshots/simulatron_salt__tests__external_refs-2.snap
---
source: src/lib/tests.rs
expression: object_code.warnings

---
[
    SaltError {
        span: 68..85,
        message: "Unresolved symbol creates an external data reference, but this looks like a constant.",
    },
]
