Crates/simulatron-salt/src/lib/snapshots/simulatron_salt__tests__hello_world-2.snap
---
source: simulatron-salt/src/lib/tests.rs
expression: success.warnings

---
[
    SaltError {
        span: 216..221,
        message: "Unused private symbol.",
    },
]
