Crates/simulatron-salt/src/lib/snapshots/simulatron_salt__tests__hello_world.snap
---
source: simulatron-salt/src/lib/tests.rs
expression: pretty_print_hex_block_zero(&success.simobj)

---
0x00000000    53 49 4D 4F  42 4A 00 01  00 00 00 02  00 00 00 02  |SIMOBJ..........|
0x00000010    49 00 00 00  5E 08 67 72  65 65 74 69  6E 67 00 00  |I...^.greeting..|
0x00000020    00 01 00 00  00 59 49 00  00 00 3E 04  6D 61 69 6E  |.....YI...>.main|
0x00000030    00 00 00 00  11 00 00 00  20 04 00 00  00 0D 0A 10  |........ .......|
0x00000040    0C 29 00 00  00 00 50 21  00 00 00 00  20 21 00 00  |.)....P!.... !..|
0x00000050    00 02 40 12  00 00 00 0D  00 00 00 00  00 00 48 65  |..@...........He|
0x00000060    6C 6C 6F 2C  20 57 6F 72  6C 64 21                  |llo, World!|
