Crates/simulatron-salt/src/lib/snapshots/simulatron_salt__tests__naming_violations-2.snap
---
source: simulatron-salt/src/lib/tests.rs
expression: success.warnings

---
[
    SaltError {
        span: 52..56,
        message: "Constant names are expected to be UPPER_SNAKE_CASE.",
    },
    SaltError {
        span: 76..80,
        message: "Data names are expected to be lower_snake_case.",
    },
    SaltError {
        span: 6..12,
        message: "Unused private symbol.",
    },
    SaltError {
        span: 32..38,
        message: "Unused private symbol.",
    },
    SaltError {
        span: 52..56,
        message: "Unused private symbol.",
    },
    SaltError {
        span: 76..80,
        message: "Unused private symbol.",
    },
    SaltError {
        span: 88..99,
        message: "Unused private symbol.",
    },
    SaltError {
        span: 106..120,
        message: "Unused private symbol.",
    },
]
