Crates/simulatron-salt/src/lib/snapshots/simulatron_salt__tests__push_pop.snap
---
source: src/lib/tests.rs
expression: pretty_print_hex_block(&object_code.code)

---
0x00000000    53 49 4D 4F  42 4A 00 01  00 00 00 00  00 00 00 01  |SIMOBJ..........|
0x00000010    11 00 00 00  08 0E 00 0E  20 0F 08 0F  01           |........ ....|
